# cmake-template

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
mytools/: CMakeLists.txt
mytools/src/: mytools.cpp
src/: main.cpp
